<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/margin_standard">

    <Button
        android:id="@+id/connect_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_connect" />

    <Button
        android:id="@+id/read_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/button_read" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prefix_hex"
            android:textSize="@dimen/text_size_standard" />

        <TextView
            android:id="@+id/read_hex_output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_standard" />
    </LinearLayout>

    <TextView
        android:id="@+id/read_output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_standard" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prefix_hex"
            android:textSize="@dimen/text_size_standard" />

        <EditText
            android:id="@+id/write_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_write_input"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            tools:targetApi="o" />
    </LinearLayout>

    <Button
        android:id="@+id/write_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/button_write" />

    <LinearLayout
        style="?android:buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/notify_button"
            style="?android:buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/button_setup_notification" />

        <Button
            android:id="@+id/indicate_button"
            style="?android:buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/button_setup_indication" />
    </LinearLayout>

    <TextView
        android:id="@+id/compat_only_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/warning_notify_indicate_compat"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="@dimen/text_size_standard"
        android:visibility="invisible"
        tools:visibility="visible" />

</LinearLayout>
