<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/margin_standard"
    tools:context=".example1_scanning.ScanActivity">

    <TextView
        android:id="@+id/connection_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/connection_state"/>

    <TextView
        android:id="@+id/rssi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/format_rssi"/>

    <Button
        android:id="@+id/connect_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_connect"/>
</LinearLayout>
